<resources>
    <string name="app_name">PDVAndroid</string>
    <string name="recImgBackGround">Imagem de Teclado</string>
    <string name="recRS">R$</string>
    <string name="txtRS">R$</string>
    <string name="txtValor">0,00</string>
    <string name="txtTotal">TOTAL A PAGAR</string>
    <string name="recPagamento">PAGAMENTO REALIZADO COM SUCESSO</string>
    <string name="recConfirmar">CONFIRMAR</string>
    <string name="recImagemRecibo">Imagem de Recibo</string>
    <string name="recImagemVoltar">Imagem Voltar</string>
    <string name="recImagemConfirmar">Imagem Confirmar</string>
    <string name="recPag">Confirmar</string>
</resources>
