<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tela_final_gradiente"
    tools:context=".TelaConfirmarActivity">

    <ImageView
        android:id="@+id/imageVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:contentDescription="@string/recImagemVoltar"
        android:onClick="voltar"
        app:layout_constraintEnd_toStartOf="@+id/textPagamento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textPagamento"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />

    <TextView
        android:id="@+id/textPagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="39dp"
        android:text="@string/recPagamento"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageRecibo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageVoltar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageRecibo"
        android:layout_width="230dp"
        android:layout_height="0dp"
        android:contentDescription="@string/recImagemRecibo"
        app:layout_constraintBottom_toTopOf="@+id/imageConfirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPagamento"
        app:srcCompat="@drawable/recibo" />

    <ImageView
        android:id="@+id/imageConfirmar"
        android:layout_width="191dp"
        android:layout_height="49dp"
        android:layout_marginBottom="42dp"
        android:contentDescription="@string/recImagemConfirmar"
        android:onClick="confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageRecibo"
        app:srcCompat="@drawable/botao_confirmar" />

    <TextView
        android:id="@+id/textConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recConfirmar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageConfirmar"
        app:layout_constraintEnd_toEndOf="@+id/imageConfirmar"
        app:layout_constraintStart_toStartOf="@+id/imageConfirmar"
        app:layout_constraintTop_toBottomOf="@+id/imageRecibo" />

    <Button
        android:id="@+id/buttonConfPag"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="190dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageRecibo"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>